--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 pnpm-lock.yaml
@@ -11,6 +11,8 @@ pnpm-lock.yaml
 
 # production
 /build
+build/
+dist/
 bundle.js
 *bundle.js
 
